# chipyard-custom

./: .gitignore  common.mk
.github/workflows/: chipyard-run-tests.yml  release-notes.yml
generators/chipyard/src/main/scala/: DigitalTop.scala  System.scala  WithInlineSimDRAM.scala
generators/chipyard/src/main/scala/config/: AbstractConfig.scala  RocketConfigs.scala
generators/chipyard/src/main/scala/config/fragments/: PeripheralFragments.scala  TileFragments.scala
generators/chipyard/src/main/scala/example/: FlatChipTop.scala  FlatTestHarness.scala
generators/chipyard/src/main/scala/harness/: HarnessBinders.scala
generators/chipyard/src/main/scala/iobinders/: IOBinders.scala
scripts/: build-setup.sh
tests/: CMakeLists.txt  CMakeLists_og.txt  crtmain.S  hello.c  htif_fake.c  link.txt  sys_stubs.c  syscalls_uart.c
